desktop hero section was added

--- a/source/sass/base/_page.scss
+++ b/source/sass/base/_page.scss
@@ -15,7 +15,7 @@ html {
 }
 
 body {
-  min-width: 320px;
+  min-width: 32rem;
   background-color: $white;
   color: $text-color;
   font-family: $font-family;
