--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -21,6 +21,8 @@
 //---------COMPONENTS-----
 
 @import "components/btn";
+@import "components/icon";
+@import "components/logo";
 
 //---------PAGES----------
 
