--- a/source/sass/components/_btn.scss
+++ b/source/sass/components/_btn.scss
@@ -2,30 +2,31 @@
   box-sizing: border-box;
   display: inline-block;
   margin: 0;
-  padding: $field-padding-vertical $field-padding-horizontal;
+  padding: 1rem 3rem;
   white-space: nowrap;
   vertical-align: middle;
+  color: white;
+  text-transform: uppercase;
   user-select: none;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 1.3rem;
   font-family: inherit;
-  line-height: $line-height;
-  color: $text-color;
-  border-radius: $border-radius;
-  background-color: $gray-lightest;
-  background-image: none;
+  font-weight: bold;
+  border: none;
+  border-radius: 50px;
+  background-color: $accent-color;
   cursor: pointer;
+  transition: $transition-time;
 
   &:hover,
   &:focus {
-    text-decoration: none;
-    color: $text-color;
-    background-color: darken($gray-lightest, 10%);
-    border-color: darken($gray-lighter, 12%);
-  }
+    background-color: $link-color--hover;
+
+}
 
   &:active,
   &:focus {
+    background-color: $link-color--hover;
   }
 
   &--disabled,
@@ -111,3 +112,25 @@
   //  transition: 0.5s;
   //}
 }
+
+@media (min-width: $mobile) {
+
+}
+
+@media (min-width: $tablet) {
+
+}
+
+@media (min-width: $desktop-sm) {
+
+}
+
+@media (min-width: $desktop) {
+  .btn {
+    padding: 1rem 4rem 1.3rem;
+    font-size: 1.3rem;
+    letter-spacing: 1.9px;
+    line-height: 1;
+  }
+}
+
