--- a/source/sass/layout/_navigation.scss
+++ b/source/sass/layout/_navigation.scss
@@ -1,33 +1,31 @@
 .main-nav {
   display: none;
-  @include col(xs, 16, 16, 0);
-  @include col(sm, 16, 16, 0);
-  @include col(md, 12, 16);
-  @include col(lg, 12, 16);
-  @include col(xl, 8, 16);
-  @include col(xxl, 8, 16);
+  @include col(xs, 12, 12, 0);
+  @include col(sm, 12, 12, 0);
+  @include col(md, 12, 12);
+  @include col(lg, 12, 12);
+  @include col(xl, 6, 12);
 
   &__list {
     list-style: none;
     margin: 0;
     padding: 0;
-    padding: 1rem 0;
     font-size: 1.6rem;
   }
 
   &__link {
     text-transform: uppercase;
     display: block;
-    padding: 1rem 0;
-    border-bottom: 1px solid rgba(white, 0.3);
+    font-family: $font-family;
+    font-style: italic;
     text-decoration: none;
-    color: $white;
+    color: #bababa;
     text-align: center;
     transition: $transition-time;
     &:hover,
     &:active,
     &:focus {
-      background-color: rgba(black, 0.1);
+
     }
     &--active {
       &:hover,
@@ -40,20 +38,13 @@
   }
 }
 
-@media (min-width: $screen-sm) {
+@media (min-width: $mobile) {
 
-  .main-nav__list {
-    margin: 0;
-    padding: 0;
-    font-size: 1.6rem;
-    text-transform: none;
-  }
 }
 
-@media (min-width: $screen-md) {
+@media (min-width: $tablet) {
   .main-nav {
     display: block;
-    background-color: transparent;
     &__toggle {
       display: none;
     }
@@ -61,14 +52,14 @@
 
   .main-nav__list {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     font-size: 1.3rem;
-    padding: 0 0.5rem;
   }
   .main-nav__link {
     font-size: 1.4rem;
-    color: #fff;
-    &:hover,
+    &:hover {
+      color: white;
+    }
     &:active,
     &:focus {
       color: $link-color--hover;
@@ -91,15 +82,15 @@
   background-color: transparent;
 }
 
-@media (min-width: $screen-lg) {
+@media (min-width: $desktop-sm) {
 
 }
 
-@media (min-width: $screen-xl) {
 
-}
-
-@media (min-width: $screen-xxl) {
-
+@media (min-width: $desktop) {
+  .main-nav {
+    padding-top: 1.4rem;
+    margin-left: 15%;
+  }
 
 }
