--- a/source/sass/utils/_media.scss
+++ b/source/sass/utils/_media.scss
@@ -15,3 +15,21 @@
 @media (min-width: $screen-xxl) {
 
 }
+
+@media (min-width: $mobile) {
+}
+
+@media (min-width: $tablet) {
+
+}
+
+@media (min-width: $desktop-sm) {
+
+}
+
+@media (min-width: $desktop) {
+
+}
+@media (min-width: $desktop-lg) {
+
+}
