--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -23,6 +23,8 @@
 @import "components/btn";
 @import "components/icon";
 @import "components/logo";
+@import "components/heading";
+@import "components/person";
 
 //---------PAGES----------
 
