--- a/source/sass/layout/_content.scss
+++ b/source/sass/layout/_content.scss
@@ -1,9 +1,11 @@
 .solutions-section {
   background-color: #f7f7f7;
 }
+
 .map-section {
   background-color: $accent-color;
 }
+
 .about-section {
   background-image: url('../img/webp/about_bg.jpg');
 }
@@ -21,10 +23,16 @@
 }
 
 @media (min-width: $desktop) {
-
+  .features-section {
+    margin-bottom: 31.7rem;
+  }
+  .solutions-section {
+    padding-top: 8rem;
+  }
   .features__text {
     margin: 0 auto;
     margin-top: 3.4rem;
+    margin-bottom: 7.1rem;
     text-align: center;
     font-family: $font-family;
     font-weight: 400;
@@ -37,6 +45,46 @@
       color: $accent-color;
     }
   }
+
+  .solutions__row {
+    display: flex;
+    margin: 0 auto;
+    margin-bottom: 4rem;
+    max-width: 73%;
+  }
+
+  .solutions {
+    padding-left: 8rem;
+    position: relative;
+
+    &:before {
+      content: '';
+      left: 0;
+      @include centerer-y();
+      width: 6.9rem;
+      height: 6.9rem;
+      background-repeat: no-repeat;
+    }
+    &--premise {
+      max-width: 69rem;
+      padding-right: 14rem;
+    }
+    &--cloud:before {
+      background-image: url('../img/icons_svg/icon_on_premise.svg');
+    }
+    &--premise:before {
+      background-image: url('../img/icons_svg/icon_on_premise.svg');
+    }
+
+  }
+
+  .solutions__title {
+    text-transform: uppercase;
+    font-size: 2rem;
+    font-style: italic;
+    color: $color-main;
+  }
+
   .solutions__text {
     margin-top: 4rem;
     text-align: center;
@@ -51,5 +99,50 @@
         color: $accent-color;
       }
     }
+    &--smaller {
+      margin-top: 0;
+      font-size: 1.7rem;
+      text-align: left;
+    }
+  }
+  .solutions__list {
+    display: flex;
+    margin: 0 auto;
+    padding-bottom: 9.2rem;
+    justify-content: space-between;
+    max-width: 100%;
+    position: relative;
+    &:after {
+      content: '';
+      width: 3.7rem;
+      height: 1.6rem;
+      @include centerer-x();
+      bottom: 0;
+      background-image: url('../img/icons_svg/arrow.svg');
+      background-repeat: no-repeat;
+
+
+    }
+  }
+  .solutions__item {
+    font-size: 2rem;
+    font-style: italic;
+    color: #565656;
+    list-style-type: none;
+    span {
+      color: #1b2f5b;
+    }
+    &:not(:first-child) {
+      margin-left: 3rem;
+      list-style-type: disc;
+    }
+  }
+  .solutions-container {
+    margin: 0 auto;
+    margin-top: 4.5rem;
+    margin-bottom: 6rem;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
   }
 }
