--- a/source/sass/layout/_hero.scss
+++ b/source/sass/layout/_hero.scss
@@ -27,15 +27,30 @@
     font-style: italic;
     letter-spacing: -1px;
     font-weight: 400;
+
+
     &--accent {
       display: block;
       color: $link-color--hover;
       font-weight: bold;
     }
+
     &-container {
+      padding-top: 11rem;
       margin: 0 auto;
       max-width: 37.5%;
-      margin-top: 28vh;
+      margin-top: 21vh;
+      position: relative;
+
+      &::before {
+        content: '';
+        @include centerer-x;
+        top: 0;
+        height: 7rem;
+        width: 2.1rem;
+        background-image: url('../img/icons_svg/hero_lines.svg');
+        background-repeat: no-repeat;
+      }
     }
   }
 }
