--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -24,7 +24,9 @@
 @import "components/icon";
 @import "components/logo";
 @import "components/heading";
+@import "components/dropdown";
 @import "components/person";
+
 
 //---------PAGES----------
 
