--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -28,6 +28,7 @@
 @import "components/dropdown";
 @import "components/person";
 @import "components/card";
+@import "components/scheme";
 
 
 //---------PAGES----------
