--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -29,6 +29,7 @@
 @import "components/person";
 @import "components/card";
 @import "components/scheme";
+@import "components/person";
 
 
 //---------PAGES----------
