--- a/source/sass/layout/_footer.scss
+++ b/source/sass/layout/_footer.scss
@@ -1,9 +1,39 @@
 .footer {
 
+  &__company-text {
+    font-style: italic;
+    color: $text-color;
+    &--accent {
+      color: $accent-color;
+      font-weight: 700;
+    }
+  }
+
+  &__contacts-title {
+    font-weight: 700;
+    color: #1b2f5b;
+    text-transform: uppercase;
+  }
+
+  &__contacts-text {
+    color: $text-color;
+  }
+
+  &__contacts-phone {
+    color: $text-color;
+    text-decoration: none;
+    transition: $transition-time;
+  }
+
   &__bottom-row {
     display: flex;
     justify-content: space-between;
     padding: 0.5rem 0;
+  }
+
+  &__logo {
+    height: 3rem;
+    width: 8rem;
   }
   &__bottom {
     color: white;
@@ -24,4 +54,72 @@
 
 @media (min-width: $desktop) {
 
+  .footer {
+
+    &__content {
+      padding-top: 5rem;
+    }
+
+    &__logo {
+      height: 6rem;
+      width: 16rem;
+    }
+    &__logo-container {
+      margin-bottom: 3rem;
+    }
+    &__company-text-container {
+      max-width: 80%;
+    }
+
+    &__company-text {
+      font-size: 1.7rem;
+      line-height: 1.3;
+    }
+
+    &__contacts-title {
+      font-size: 1.5rem;
+      margin-bottom: 1.5rem;
+    }
+
+    &__contacts-text {
+      max-width: 80%;
+      font-size: 1.4rem;
+      line-height: 1.7;
+    }
+
+    &__contacts-phone {
+      font-size: 1.4rem;
+      line-height: 1.7;
+      &:hover,
+      &:active {
+        font-weight: 700;
+      }
+    }
+
+    &__btn {
+      margin-top: 3rem;
+      display: block;
+      text-align: left;
+      max-width: 85%;
+      font-size: 1.3rem;
+      text-decoration: none;
+      transition: $transition-time;
+      &:hover {
+        background-color: $color-main;
+      }
+      &::after {
+        content: '';
+        @include centerer-y();
+        width: 1.2rem;
+        height: 1.8rem;
+        background-repeat: no-repeat;
+        background-image: url(../img/icons_svg/icon_map.svg);
+        
+      }
+    }
+
+    &__sitemap-container {
+      margin-right: 3rem;
+    }
+  }
 }
