--- a/source/sass/layout/_grid.scss
+++ b/source/sass/layout/_grid.scss
@@ -11,11 +11,46 @@
     margin-bottom: 4rem;
   }
 }
-.cards-container {
 
+.about__team-row {
+  list-style-type: none;
+  @include row();
+  padding-bottom: 23rem;
+}
+.person-container {
+  @include col(xs, 12, 12, 0);
+  @include col(sm, 12, 12, 0);
+  @include col(md, 12, 12);
+  @include col(lg, 12, 12);
+  @include col(xl, 3, 12);
 }
 
+.footer__company {
+  @include col(xs, 12, 12, 0);
+  @include col(sm, 12, 12, 0);
+  @include col(md, 12, 12);
+  @include col(lg, 12, 12);
+  @include col(xl, 3, 12);
+}
+
+.footer__contacts {
+  @include col(xs, 12, 12, 0);
+  @include col(sm, 12, 12, 0);
+  @include col(md, 12, 12);
+  @include col(lg, 12, 12);
+  @include col(xl, 3, 12);
+}
+
+.footer__form-container {
+  @include col(xs, 12, 12, 0);
+  @include col(sm, 12, 12, 0);
+  @include col(md, 12, 12);
+  @include col(lg, 12, 12);
+  @include col-offset(xl, 1, 12);
+  @include col(xl, 5, 12);
+}
 @media (min-width: $mobile) {
+
 }
 
 @media (min-width: $tablet) {
