--- a/source/sass/utils/_utility.scss
+++ b/source/sass/utils/_utility.scss
@@ -5,9 +5,15 @@
 .mb-2 {
   margin-bottom: 2rem;
 }
+
 .mb-4 {
   margin-bottom: 4rem;
 }
+
 .mb-7 {
+  margin-bottom: 7rem;
+}
+
+.mb-9 {
   margin-bottom: 7rem;
 }
