--- a/source/sass/utils/_variables.scss
+++ b/source/sass/utils/_variables.scss
@@ -18,7 +18,7 @@ $color-warning: hsl(35, 84%, 62%);
 
 // Семантические цвета
 
-$text-color: $gray-darkest;
+$text-color: #565656;
 $text-color--muted: $gray;
 $body-bg: #fff;
 
