--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -30,6 +30,7 @@
 @import "components/card";
 @import "components/scheme";
 @import "components/person";
+@import "components/form";
 
 
 //---------PAGES----------
