--- a/source/sass/layout/_content.scss
+++ b/source/sass/layout/_content.scss
@@ -24,6 +24,7 @@
 
 @media (min-width: $desktop) {
   .features-section {
+    padding-top: 10rem;
     margin-bottom: 31.7rem;
   }
   .solutions-section {
