--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -24,6 +24,7 @@
 @import "components/btn";
 @import "components/icon";
 @import "components/logo";
+@import "components/nav-bar";
 @import "components/heading";
 @import "components/dropdown";
 @import "components/person";
