--- a/source/sass/layout/_header.scss
+++ b/source/sass/layout/_header.scss
@@ -23,6 +23,7 @@
     margin-left: 4.8rem;
   }
   .header__icon-container {
+    text-decoration: none;
     padding-top: 1.3rem;
   }
   .header__btn-container {
