--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -30,6 +30,9 @@
 @import "components/person";
 @import "components/card";
 @import "components/scheme";
+@import "components/filter";
+@import "components/article";
+@import "components/map";
 @import "components/person";
 @import "components/form";
 
