--- a/source/sass/utils/_variables.scss
+++ b/source/sass/utils/_variables.scss
@@ -23,6 +23,8 @@ $text-color--muted: $gray;
 $body-bg: #fff;
 
 $link-color: $color-main;
+$text-color-light: #f2c546;
+$text-color-accent: #e69608;
 $link-color--hover: #eca600;
 
 $border-color: $gray-light;
