--- a/source/sass/components/_form.scss
+++ b/source/sass/components/_form.scss
@@ -12,7 +12,20 @@
 
 @media (min-width: $desktop) {
   .form {
-
+    &__input-wrapper {
+      border: 1.1px solid #dcdcdc;
+      border-radius: 5rem;
+      display: flex;
+      &--focus {
+        border: 1.1px solid $link-color--hover;
+        box-shadow: 0px 0px 5px 0 rgba($link-color--hover, .41);
+      }
+      &:active,
+      &:focus {
+        border: 1.1px solid $link-color--hover;
+        box-shadow: 0px 0px 5px 0 rgba($link-color--hover, .41);
+      }
+    }
     &__input {
       padding: 1.4rem 0 1.7rem 2rem;
       font-family: $font-family;
@@ -30,7 +43,7 @@
         border: 1.1px solid $color-main;
         box-shadow: 0px 0px 5px 0 #23406e30;
       }
-      &:not(:last-child) {
+      &:not(:last-of-type) {
         margin-bottom: 2rem;
       }
       &::placeholder {
@@ -38,12 +51,25 @@
         font-size: 1.2rem;
         text-transform: uppercase;
       }
+
+      &--resource {
+        margin-bottom: 0;
+        border: none;
+        color: $link-color--hover;
+        width: 90%;
+        &:active,
+        &:focus {
+          border: none;
+          box-shadow: none;
+        }
+      }
     }
 
     &__btn {
       width: 50%;
       padding: 1.4rem 0 1.7rem 2rem;
       font-weight: 400;
+      margin-top: 2rem;
       background-color: transparent;
       text-align: left;
       border: 1px solid $color-main;
