--- a/source/sass/components/_nav-bar.scss
+++ b/source/sass/components/_nav-bar.scss
@@ -1,11 +1,7 @@
 .nav-bar {
-  display: flex;
   background-color: #fff;
-  padding: 2.5rem 0;
-  position: sticky;
-  top: 0;
+  padding: 1.5rem 0 2rem;
   box-shadow: 0 0 20px 0 #0000003d;
-  z-index: 100;
 
   &__logo-container {
     margin-left: 4.8rem
