--- a/source/sass/layout/_grid.scss
+++ b/source/sass/layout/_grid.scss
@@ -50,6 +50,25 @@
   @include col-offset(xl, 1, 12);
   @include col(xl, 5, 12);
 }
+
+.resources__articles-container {
+  @include row();
+  padding-top: 4rem;
+}
+
+.resources__articles {
+  @include col(xs, 12, 12, 0);
+  @include col(sm, 12, 12, 0);
+  @include col(md, 12, 12);
+  @include col(lg, 12, 12);
+  @include col(xl, 4, 12);
+}
+
+.map__top {
+  padding: 1rem 0;
+  display: flex;
+  align-items: center;
+}
 @media (min-width: $mobile) {
 
 }
