--- a/source/sass/components/_dropdown.scss
+++ b/source/sass/components/_dropdown.scss
@@ -157,7 +157,9 @@
 
     &__content {
       padding-left: 6rem;
+      margin-bottom: 4rem;
     }
+
     &__list {
       padding-bottom: 1.8rem;
       font-size: 1.6rem;
