--- a/source/sass/components/_filter.scss
+++ b/source/sass/components/_filter.scss
@@ -1,8 +1,131 @@
 .filter {
-  list-style-type: none;
 
+  &-btn-wrapper {
 
+  }
+
+  &__btn {
+    background-color: transparent;
+    border: none;
+    box-sizing: border-box;
+    display: inline-block;
+    margin: 0;
+    padding: 1rem 3rem 1rem 0;
+    white-space: nowrap;
+    vertical-align: middle;
+    color: #696969;
+    text-transform: uppercase;
+    user-select: none;
+    font-size: 1.2rem;
+    font-family: inherit;
+    font-weight: 400;
+    cursor: pointer;
+    transition: $transition-time;
+    position: relative;
+    outline: none;
+
+    
+    &::after {
+      content: '';
+      position: absolute;
+      top: 1.1rem;
+      background-image: url('../img/icons_svg/arrow_down_filter.svg');
+      background-repeat: no-repeat;
+      transform: rotate(90deg);
+      transform-origin: center;
+      right: 0;
+      width: 12px;
+      height: 12px;
+      transition: $transition-time;
+    }
+    &:hover,
+    &:focus,
+    &:active {
+      font-weight: 700;
+
+    }
+    &:hover:after {
+      transform: rotate(0);
+    }
+  }
+
+  &__list {
+    list-style-type: none;
+    background-color: #fff;
+    display: block;
+    position: absolute;
+    top: 100%;
+    transition: all 1s ease-out 0.5s;
+    box-shadow: 0 2px 4px 0 #00000080;
+
+  }
   &__link {
     text-decoration: none;
+    text-transform: uppercase;
+    color: #6a6a6a;
+    transition: $transition-time;
+    position: relative;
+    &:hover {
+      color: #1b2f5b;
+      font-weight: bold;
+    }
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 4px;
+      height: 100%;
+      opacity: 0;
+      transition: opacity .3s ease-in;
+      background-color: #1b2f5b;
+    }
+
+    &:hover:before {
+      opacity: 1;
+    }
+
+  }
+}
+
+
+@media (min-width: $mobile) {
+}
+
+@media (min-width: $tablet) {
+
+}
+
+@media (min-width: $desktop-sm) {
+
+}
+
+@media (min-width: $desktop) {
+  .filter {
+    position: relative;
+    padding-left: 10rem;
+
+    &-box {
+      margin-left: auto;
+    }
+    &__list {
+      display: none;
+      left: 0;
+    }
+
+    &__item {
+    }
+
+    &__link {
+      display: inline-block;
+      padding: 1.5rem 2.5rem 1.5rem 10rem;
+      font-size: 1.2rem;
+      font-weight: 400;
+      &:hover {
+
+      }
+
+    }
   }
 }
