--- a/source/sass/layout/_grid.scss
+++ b/source/sass/layout/_grid.scss
@@ -1,3 +1,7 @@
+.features-container {
+  @include container();
+  position: relative;
+}
 .dropdown-container {
   @include col(xs, 12, 12, 0);
   @include col(sm, 12, 12, 0);
@@ -7,9 +11,13 @@
 }
 .dropdown-row {
   @include row();
-  &:not(:last-child) {
-    margin-bottom: 4rem;
-  }
+  width: 100%;
+  position: absolute;
+}
+
+.dropdown-wrapper {
+  display: flex;
+  flex-direction: column;
 }
 
 .about__team-row {
@@ -54,6 +62,7 @@
 .resources__articles-container {
   @include row();
   padding-top: 4rem;
+  flex-wrap: nowrap;
 }
 
 .resources__articles {
@@ -89,5 +98,10 @@
       flex-basis: 37.073608617%;
       max-width: 37.073608617%;
     }
+  }
+
+  .resources__articles-container {
+    flex-wrap: nowrap;
+    overflow-x: hidden; //@TODO temporary solution
   }
 }
