--- a/source/sass/components/_filter.scss
+++ b/source/sass/components/_filter.scss
@@ -44,7 +44,8 @@
       font-weight: 700;
 
     }
-    &:hover:after {
+
+    &-is--active::after {
       transform: rotate(0);
     }
   }
@@ -52,12 +53,16 @@
   &__list {
     list-style-type: none;
     background-color: #fff;
-    display: block;
     position: absolute;
-    top: 100%;
-    transition: all 1s ease-out 0.5s;
+    transition: all 0.3s ease-out;
     box-shadow: 0 2px 4px 0 #00000080;
+  }
 
+  &__item {
+
+    &-is--active {
+      display: block;
+    }
   }
   &__link {
     text-decoration: none;
@@ -77,15 +82,13 @@
       left: 0;
       width: 4px;
       height: 100%;
-      opacity: 0;
-      transition: opacity .3s ease-in;
-      background-color: #1b2f5b;
+      transition: background-color .3s ease-in;
+      background-color: #d8d8d8;
     }
 
     &:hover:before {
-      opacity: 1;
+      background-color: #1b2f5b;
     }
-
   }
 }
 
@@ -110,18 +113,29 @@
       margin-left: auto;
     }
     &__list {
-      display: none;
+      max-height: 0;
       left: 0;
+      overflow: hidden;
     }
 
     &__item {
+      &:first-child {
+        padding-top: 1rem;
+      }
+      &:last-child {
+        padding-bottom: 1rem;
+      }
     }
 
     &__link {
       display: inline-block;
-      padding: 1.5rem 2.5rem 1.5rem 10rem;
+      padding: .8rem 2.5rem 0.8rem 10rem;
+      letter-spacing: 1px;
       font-size: 1.2rem;
       font-weight: 400;
+
+
+
       &:hover {
 
       }
