--- a/source/sass/components/_map.scss
+++ b/source/sass/components/_map.scss
@@ -1,34 +1,98 @@
 .map {
   height: 100%;
   width: 100%;
+  left: 0;
   background-image: url(../img/webp/map.png);
   background-repeat: no-repeat;
   background-position: 50% 50%;
+
+  background-size: contain;
   position: absolute;
 
-  &__list {
+  &__container {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    padding-bottom: 20rem;
+    .container {
+      position: relative;
+      height: 100%;
+    }
+  }
+
+
+  &__nav-list {
     list-style-type: none;
     display: flex;
   }
 
-  &__link {
-    padding-left: 6rem;
+  &__nav-link {
+    padding-left: 4rem;
     text-decoration: none;
     font-style: italic;
     text-transform: uppercase;
     color: #fff;
+    position: relative;
+
+    &::before {
+      content: '';
+      @include centerer-y();
+      left: 1.8rem;
+      width: 1.6rem;
+      height: 3.6rem;
+      background-repeat: no-repeat;
+      transition: 0.8s opacity ease-out;
+      opacity: 0;
+    }
 
     &:hover,
     &:active {
       font-weight: 700;
+      &:before {
+        background-image: url('../img/icons_svg/nav_lines_white.svg');
+        opacity: 1;
+      }
     }
 
   }
 
 }
 
-
 @media (min-width: $mobile) {
+  .map {
+    &__content {
+      transform: scale(0) translateX(-10%);
+      top: -6.9rem;
+      padding: 1.4rem 3.5rem;
+      @include centerer-x();
+      white-space: nowrap;
+      color: #fff;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      border: 1px solid white;
+      border-radius: 10rem;
+      transition: all 0.3s ease-in;
+
+      &::before {
+        content: '';
+        @include centerer-y();
+        right: 1.5rem;
+        width: 1rem;
+        height: 1rem;
+        background-image: url(../img/icons_svg/arrow_right_map.svg);
+        background-repeat: no-repeat;
+      }
+
+      &::after {
+        content: '';
+        @include centerer-x();
+        width: 1px;
+        bottom: -3rem;
+        background-color: #fff;
+        height: 3rem;
+      }
+    }
+  }
 }
 
 @media (min-width: $tablet) {
@@ -42,8 +106,79 @@
 @media (min-width: $desktop) {
   .map {
 
-    &__list {
+    &__nav-list {
+      padding-top: 1rem;
       margin-left: 4rem;
+    }
+
+    &__country-dot {
+      cursor: pointer;
+      background-color: #fff;
+      height: 1rem;
+      width: 1rem;
+      border-radius: 2rem;
+      position: absolute;
+      transition: box-shadow 0.3s ease;
+
+      &--swiss {
+        top: 35%;
+        left: 50%;
+        height: 2rem;
+        width: 2rem;
+      }
+
+      &--brazil {
+        top: 67%;
+        left: 42%;
+      }
+
+      &--argentina {
+        top: 85%;
+        left: 33%;
+      }
+
+      &--columbia {
+        top: 75%;
+        left: 30%;
+      }
+
+      &--eeuu {
+        top: 45%;
+        left: 20%;
+      }
+
+      &--canada {
+        top: 33%;
+        left: 15%;
+      }
+
+      &--mexico {
+        top: 53%;
+        left: 26%;
+      }
+
+      &--panama {
+        top: 55%;
+        left: 30%;
+      }
+
+      &--costa-rica {
+        top: 59%;
+        left: 35%;
+      }
+
+      &--australia {
+        top: 80%;
+        left: 90%;
+      }
+
+
+      &:hover {
+        box-shadow: 0 0 0 .7rem $color-main;
+      }
+      &:hover >.map__content {
+        transform: scale(1) translateX(-50%);
+      }
     }
   }
 }
