--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -10,6 +10,7 @@
 @import "base/fonts";
 @import "base/typography";
 @import "base/page";
+@import "base/animations";
 
 //---------LAYOUT-----------
 @import "layout/grid";
