TODO tasks were solved

--- a/source/sass/components/_btn.scss
+++ b/source/sass/components/_btn.scss
@@ -21,7 +21,7 @@
   &--orange {
     text-align: left;
     background-color: $link-color--hover;
-    color: $color-main;
+    color: $black;
   }
   &--resources {
     background-color: transparent;
