--- a/source/sass/components/_card.scss
+++ b/source/sass/components/_card.scss
@@ -23,11 +23,26 @@
   &__top-container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
   }
-  //@TODO card-icon width
+
   &__icon {
     height: 4rem;
     width: 4rem;
+
+    &--docs {
+      width: 4.8rem;
+    }
+
+    &--list {
+      height: 4.8rem;
+      width: 4.4rem;
+    }
+
+    &--university {
+      width: 5.3rem;
+      height: 5.3rem;
+    }
   }
   &__number {
     font-weight: 700;
