--- a/source/sass/layout/_header.scss
+++ b/source/sass/layout/_header.scss
@@ -25,7 +25,7 @@
 
     &--is-active {
       background-color: #fff;
-      padding: 1.5rem 0 2rem;
+      padding: 2.2rem 0;
       box-shadow: 0 0 20px 0 #0000003d;
     }
 
