--- a/source/sass/layout/_hero.scss
+++ b/source/sass/layout/_hero.scss
@@ -1,7 +1,6 @@
 .hero {
   height: 100vh;
-  background-image: linear-gradient(rgba(35, 64, 110, 0.8)),
-  //@TODO fix gradient
+  background-image: linear-gradient(90deg, rgba(35, 64, 110, 0.8)0%, rgba(35, 64, 110, 0.8)100%),
   url('../img/webp/hero_bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
