Sidebar menu and hero adaptive section were added

--- a/source/sass/components/_icon.scss
+++ b/source/sass/components/_icon.scss
@@ -1,6 +1,8 @@
 .icon {
   fill: white;
   transition: $transition-time;
+  width: 1.8rem;
+  height: 1.8rem;
 
   &:hover {
     fill: $accent-color;
