--- a/source/sass/layout/_navigation.scss
+++ b/source/sass/layout/_navigation.scss
@@ -1,10 +1,12 @@
 .main-nav {
   display: none;
-  @include col(xs, 12, 12, 0);
-  @include col(sm, 12, 12, 0);
-  @include col(md, 12, 12);
-  @include col(lg, 12, 12);
-  @include col(xl, 6, 12);
+  position: fixed;
+  right: 0;
+  height: 100vh;
+  top: 0;
+  padding-top: 10rem;
+  background-color: #fff;
+  box-shadow: -9px -13px 12px rgba(#000, 0.1);
 
   &__list {
     list-style: none;
@@ -13,31 +15,71 @@
     font-size: 1.6rem;
   }
 
+  &__item {
+    &:last-child {
+      border-bottom: 1px solid #e7e7e7;
+    }
+  }
+
   &__link {
     text-transform: uppercase;
+    font-size: 1.4rem;
+    border-top: 1px solid #e7e7e7;
+    padding: 2rem 0 2rem 4.2rem;
     display: block;
     font-family: $font-family;
     font-style: italic;
     text-decoration: none;
-    color: #bababa;
-    text-align: center;
+    color: $text-color;
+    text-align: left;
     transition: $transition-time;
+
+
+
+    &:hover {
+      color: black;
+    }
+
+    &--active,
+    &:active,
+    &:focus {
+      transition: $transition-time;
+      color: $link-color--hover;
+      background-color: #f7f7f7;
+      font-size: 1.4rem;
+      font-weight: 700;
+      position: relative;
+      &::before {
+        content: '';
+        @include centerer-y();
+        width: 1.6rem;
+        height: 3.7rem;
+        left: 2rem;
+        background-repeat: no-repeat;
+        background-image: url(../img/icons_svg/nav_lines.svg);
+      }
+    }
 
     &--bar {
       transition: $transition-time;
-      color: #919191;
-    }
-
-    &:hover,
-    &:active,
-    &:focus {
-
+      color: #929292;
     }
   }
 }
 
 @media (min-width: $mobile) {
+  .main-nav {
+    width: 25.6rem;
+    max-width: 25.6rem;
 
+    &__link {
+      &--active,
+      &:active,
+      &:focus {
+        color: $link-color--hover;
+      }
+    }
+  }
 }
 
 @media (min-width: $tablet) {
@@ -51,42 +93,12 @@
   .main-nav__list {
     display: flex;
     padding-top: 1rem;
-    justify-content: space-between;
+    flex-direction: column;
     font-size: 1.3rem;
   }
   .main-nav__link {
-    font-size: 1.4rem;
-    padding: 0.7rem 0;
-    padding-left: 2rem;
 
-    &:hover {
-      color: white;
 
-    }
-    &--bar {
-      &:hover {
-        color: black;
-      }
-    }
-
-    &--active,
-    &:active,
-    &:focus {
-      transition: $transition-time;
-      color: $link-color--hover;
-      font-size: 1.4rem;
-      font-weight: 700;
-      position: relative;
-      &::before {
-        content: '';
-        @include centerer-y();
-        width: 1.6rem;
-        height: 3.7rem;
-        left: 0;
-        background-repeat: no-repeat;
-        background-image: url(../img/icons_svg/nav_lines.svg);
-      }
-    }
   }
 }
 
@@ -96,7 +108,66 @@
 
 @media (min-width: $desktop) {
   .main-nav {
-    margin-left: 15%;
-  }
+    background-color: transparent;
+    padding: 0;
+    max-width: 50%;
+    height: inherit;
+    flex-basis: 50%;
+    margin-left: 0;
+    box-shadow: none;
+    position: static;
 
+    &__list {
+      flex-direction: row;
+      justify-content: space-between;
+    }
+
+    &__item {
+      &:last-child {
+        border-bottom: none;
+      }
+    }
+
+    &__link {
+      font-size: 1.4rem;
+      color: #bababa;
+      padding: 0.7rem 0;
+      padding-left: 1.5rem;
+      text-align: center;
+      border: none;
+
+
+      &:hover {
+        color: white;
+      }
+
+      &--bar {
+        color: #929292;
+        &:hover {
+          color: black;
+        }
+      }
+
+      &--active,
+      &:active,
+      &:focus {
+        color: $link-color--hover;
+        background-color: transparent;
+        &::before {
+          left: 0;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 1350px) {
+
+  .main-nav {
+    margin-left: 3%;
+
+    &__link {
+      padding-left: 2rem;
+    }
+  }
 }
