--- a/source/sass/components/_heading.scss
+++ b/source/sass/components/_heading.scss
@@ -1,6 +1,22 @@
 .heading {
   color: $color-main;
+  font-family: $font-family;
   font-weight: 400;
+  font-size: 2.5rem;
+  font-style: italic;
+  text-align: center;
+
+  &--teal {
+    color: $accent-color;
+  }
+
+  &--left {
+    text-align: left;
+  }
+
+  &--white {
+    color: $white;
+  }
 
 }
 
@@ -19,19 +35,8 @@
 @media (min-width: $desktop) {
   .heading {
     font-size: $font-size--h2;
-    font-style: italic;
-    text-align: center;
-    font-family: $font-family;
     line-height: 1.04;
     letter-spacing: -1px;
-    &--teal {
-      color: $accent-color;
-    }
-    &--left {
-      text-align: left;
-    }
-    &--white {
-      color: $white;
-    }
+
   }
 }
