--- a/source/sass/layout/_content.scss
+++ b/source/sass/layout/_content.scss
@@ -1,6 +1,165 @@
+.features-section {
+  padding-top: 6rem;
+  padding-bottom: 7rem;
+}
+
+.features__text-container {
+  padding: 0 1.5rem;
+}
+
+.features__text {
+  font-size: 1.5rem;
+  margin-top: 3.2rem;
+  text-align: center;
+  line-height: 1.6;
+  margin-bottom: 3.6rem;
+
+  &--accent {
+    font-weight: 700;
+    color: $accent-color;
+  }
+}
+
 .solutions-section {
+  padding-top: 4.3rem;
   background-color: #f7f7f7;
 }
+
+.solutions__text-container {
+  padding: 0 1.5rem;
+}
+
+.solutions__text {
+  text-align: center;
+  margin-top: 3rem;
+  line-height: 1.6;
+  font-weight: 400;
+  font-size: 1.5rem;
+  color: #565656;
+
+  &--accent {
+    color: #1b2f5b;
+    font-weight: 700;
+    margin-top: 0;
+    &-teal {
+      color: $accent-color;
+      font-weight: 700;
+    }
+  }
+  &--smaller {
+    margin-top: 0;
+    font-size: 1.35rem;
+    text-align: left;
+  }
+}
+
+.solutions-container {
+  margin-top: 4.5rem;
+  padding: 0 1.5rem;
+}
+
+.solutions__title {
+  text-transform: uppercase;
+  font-size: 1.6rem;
+  font-style: italic;
+  font-weight: 400;
+  color: $color-main;
+}
+
+.solutions__row {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 4rem;
+}
+
+ .solutions__box--border-bottom {
+   margin-bottom: 2.3rem;
+ }
+
+
+
+.solutions {
+  padding-left: 6.7rem;
+  position: relative;
+
+  &--premise {
+    margin-bottom: 2.3rem;
+  }
+
+  &--cloud {
+    margin-top: 2.3rem;
+    
+    &::after {
+      top: -2.3rem;
+      left: 0;
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      background-color: #d8d8d8;
+    }
+  }
+
+  &:before {
+    content: '';
+    left: 0;
+    @include centerer-y();
+    width: 5.4rem;
+    height: 5.4rem;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  &--premise:before {
+    background-image: url('../img/icons_svg/icon_on_premise.svg');
+  }
+
+  &--cloud:before {
+    background-image: url('../img/icons_svg/icon_on_cloud.svg');
+  }
+}
+
+.solutions__list {
+  display: flex;
+  flex-direction: column;
+  padding-left: 6.7rem;
+  padding-bottom: 5.5rem;
+  margin-bottom: 5.3rem;
+  justify-content: space-between;
+  position: relative;
+
+  &::before {
+    content: '';
+    position: absolute;
+    left: 3rem;
+    top: 2rem;
+    width: 1.4rem;
+    height: 4.9rem;
+    background-image: url('../img/icons_svg/solution_lines.svg');
+    background-repeat: no-repeat;
+  }
+
+  &:after {
+    content: '';
+    width: 3.7rem;
+    height: 1.6rem;
+    @include centerer-x();
+    bottom: 0;
+    background-image: url('../img/icons_svg/arrow.svg');
+    background-repeat: no-repeat;
+  }
+}
+
+.solutions__item {
+  font-size: 1.7rem;
+  font-style: italic;
+  color: #565656;
+  list-style-type: none;
+  span {
+    color: #1b2f5b;
+  }
+}
+
 .resources__text {
   font-style: italic;
 
@@ -27,7 +186,35 @@
 }
 
 @media (min-width: $desktop-sm) {
+  .solutions__text-container {
+    padding: 0;
+  }
 
+  .solutions-container {
+    margin: 0 auto;
+    margin-top: 4.5rem;
+    margin-bottom: 6rem;
+    padding: 0;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+  }
+
+  .solutions__row {
+    flex-direction: row;
+  }
+
+  .solutions {
+    &--cloud {
+      &::after {
+        display: none;
+      }
+    }
+  }
+
+  .solutions__list {
+    flex-direction: row;
+  }
 }
 
 @media (min-width: $desktop) {
@@ -35,37 +222,37 @@
     padding-top: 10rem;
     padding-bottom: 47.7rem;
   }
+
   .solutions-section {
     padding-top: 8rem;
-
   }
+
   .resources-section {
     padding: 10rem 0 16rem;
   }
+
   .map-section {
     padding-top: 3.5rem;
     position: relative;
     min-height: 80rem;
   }
+
+  .features__text-container {
+    padding: 0;
+  }
+
   .features__text {
     margin: 0 auto;
+    line-height: 1.75;
     margin-top: 3.4rem;
     margin-bottom: 7.1rem;
-    text-align: center;
     font-family: $font-family;
     font-weight: 400;
     font-size: 2rem;
-    line-height: 1.75;
-    color: #565656;
     max-width: 68%;
-    &--accent {
-      font-weight: 700;
-      color: $accent-color;
-    }
   }
 
   .solutions__row {
-    display: flex;
     margin: 0 auto;
     margin-bottom: 4rem;
     max-width: 90%;
@@ -84,21 +271,20 @@
       background-repeat: no-repeat;
     }
     &--premise {
+      margin-bottom: 0rem;
+      border-bottom: none;
       max-width: 69rem;
+      padding-bottom: 0;
       padding-right: 7rem;
       margin-left: 14rem;
     }
     &--cloud {
+      margin-top: 0rem;
       padding-left: 16rem;
-    }
-
-    &--premise:before {
-      background-image: url('../img/icons_svg/icon_on_premise.svg');
     }
 
     &--cloud:before {
       left: 8rem;
-      background-image: url('../img/icons_svg/icon_on_cloud.svg');
     }
 
     &--premise:after {
@@ -113,74 +299,44 @@
   }
 
   .solutions__title {
-    text-transform: uppercase;
     font-size: 2rem;
-    font-style: italic;
-    color: $color-main;
   }
 
   .solutions__text {
-    text-align: center;
-    line-height: 1.6;
-    font-weight: 400;
+    margin-top: 0;
     font-size: 2rem;
-    color: #565656;
 
-    &--accent {
-      color: #1b2f5b;
-      font-weight: 700;
-      &-teal {
-        color: $accent-color;
-        font-weight: 700;
-      }
-    }
     &--smaller {
-      margin-top: 0;
       font-size: 1.7rem;
       text-align: left;
     }
   }
 
   .solutions__list {
-    display: flex;
     margin: 0 auto;
+    padding-left: 6rem;
     padding-bottom: 9.2rem;
-    justify-content: space-between;
     max-width: 100%;
-    position: relative;
+
+    &::before {
+      display: none;
+    }
+
     &:after {
-      content: '';
       width: 3.7rem;
       margin-left: 1rem;
       height: 1.6rem;
-      @include centerer-x();
       bottom: 0;
-      background-image: url('../img/icons_svg/arrow.svg');
-      background-repeat: no-repeat;
     }
   }
 
   .solutions__item {
     font-size: 2rem;
-    font-style: italic;
-    color: #565656;
-    list-style-type: none;
-    span {
-      color: #1b2f5b;
-    }
+
     &:not(:first-child) {
       margin-left: 3.4rem;
       list-style-type: disc;
     }
-  }
-
-  .solutions-container {
-    margin: 0 auto;
-    margin-top: 4.5rem;
-    margin-bottom: 6rem;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
   }
 
   .solutions__services-container {
@@ -265,7 +421,6 @@
     background: $link-color--hover;
     width: 0;
   }
-
 
   .about__heading-container {
     padding-top: 9rem;
