--- a/source/sass/utils/_utility.scss
+++ b/source/sass/utils/_utility.scss
@@ -1,22 +1,26 @@
 .display-b {
   display: block;
 }
-.mb-0 {
-  margin-bottom: 0;
-}
 
-.mb-2 {
-  margin-bottom: 2rem;
-}
+@media (min-width: $desktop-sm) {
 
-.mb-4 {
-  margin-bottom: 4rem;
-}
+  .mb-0 {
+    margin-bottom: 0;
+  }
 
-.mb-7 {
-  margin-bottom: 7rem;
-}
+  .mb-2 {
+    margin-bottom: 2rem;
+  }
 
-.mb-9 {
-  margin-bottom: 7rem;
+  .mb-4 {
+    margin-bottom: 4rem;
+  }
+
+  .mb-7 {
+    margin-bottom: 7rem;
+  }
+
+  .mb-9 {
+    margin-bottom: 7rem;
+  }
 }
